--- a/Apply Regression Methods on House Prices Prediction(Part 2).ipynb
+++ b/Apply Regression Methods on House Prices Prediction(Part 2).ipynb
@@ -3523,22 +3523,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE in test set =  48.62945426921009\n"
+      "RMSE in test set =  48.622352546716755\n"
      ]
     }
    ],
    "source": [
     "# Do prediction on test set????????????????????\n",
     "K = 36\n",
-    "predict = model.predict(X_test)\n",
-    "print('RMSE in test set = ',np.sqrt(mean_squared_error(np.exp(y_test),np.exp(predict))))"
+    "model = neighbors.KNeighborsRegressor(n_neighbors = K, weights='distance')\n",
+    "X_train_validation = pd.DataFrame(preprocessing.normalize(traindata0[IndependentFeatures]))\n",
+    "y_train_validation = traindata0['log(price)']\n",
+    "model.fit(X_train_validation, y_train_validation)  #fit the model\n",
+    "predict=model.predict(X_test) #make prediction on validation set\n",
+    "error_test = np.sqrt(mean_squared_error(np.exp(y_test),np.exp(predict))) #calculate rmse\n",
+    "print('RMSE in test set = ', error_test)"
    ]
   },
   {
@@ -3562,24 +3567,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cross_validation import train_test_split\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "import pandas as pd# Pandas is an easy-to-use data structures and data analysis tools\n",
-    "import numpy as np# NumPy is the fundamental package for scientific computing\n",
-    "from sklearn.model_selection import GridSearchCV\n",
+    "#from sklearn.cross_validation import train_test_split\n",
+    "#from sklearn.neighbors import KNeighborsRegressor\n",
+    "#import pandas as pd# Pandas is an easy-to-use data structures and data analysis tools\n",
+    "#import numpy as np# NumPy is the fundamental package for scientific computing\n",
+    "#from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "params = {'n_neighbors':range(1,50)}\n",
+    "#params = {'n_neighbors':range(1,50)}\n",
+    "#knn = neighbors.KNeighborsRegressor()\n",
     "\n",
-    "knn = neighbors.KNeighborsRegressor()\n",
-    "\n",
-    "model = GridSearchCV(knn, params, cv=5)\n",
-    "model.fit(x_train,y_train)\n",
-    "model.best_params_"
+    "#model = GridSearchCV(knn, params, cv=5)\n",
+    "#model.fit(X_train,y_train)\n",
+    "#model.best_params_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
