--- a/Apply Regression Methods on House Prices Prediction(Part 2).ipynb
+++ b/Apply Regression Methods on House Prices Prediction(Part 2).ipynb
@@ -4311,6 +4311,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models_cross.to_csv('Evaluation_Comparison.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4319,11 +4328,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In the future, we may add some more ML methods such as decition tree, random forest, adaboost, GBDT, PCA in the notebook."
+   ]
   },
   {
    "cell_type": "code",
